# mcga-dev-env

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  init.sh
docker/: build.sh  docker-compose.yml  ubuntu.Dockerfile
